hide TOC on mobile; try not focusing to see if it fixes weird mobile issue

--- a/frontend/src/reports/Report.module.scss
+++ b/frontend/src/reports/Report.module.scss
@@ -93,3 +93,11 @@
     scroll-margin: $sticky-madlib-height-compare 0px 0px 0px;
   }
 }
+
+.FloatingTableOfContentsWrapper {
+  display: none;
+
+  @media only screen and (min-width: $sm) {
+    display: block;
+  }
+}
